yamls/svc-all.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-main
  name: spring-main
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: spring-main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-main
  labels:
    app: spring-main
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-main
      version: v1
  template:
    metadata:
      labels:
        app: spring-main
        version: v1
    spec:
      containers:
      - image: hhkim940/spring-main:latest
        name: spring-main-pod
        env : 
        - name : LOGIN_IP
          value : "spring-login.istio.svc.cluster.local"
        - name : LOGIN_PORT
          value : "8000"
        - name : PROJECT_IP
          value : "spring-proj.istio.svc.cluster.local"
        - name : PROJECT_PORT
          value : "8000"
        - name : MAIN_IP
          value : "spring-main.istio.svc.cluster.local"
        - name : MAIN_PORT
          value : "8000"
        - name : TODO_IP
          value : "spring-todo.istio.svc.cluster.local"
        - name : TODO_PORT
          value : "8000"
        - name : MESSAGE_IP
          value : "spring-chat.istio.svc.cluster.local"
        - name : MESSAGE_PORT
          value : "8000"
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred2
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-login
  name: spring-login
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: spring-login
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-login
  labels:
    app: spring-login
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-login
      version: v1
  template:
    metadata:
      labels:
        app: spring-login
        version: v1
    spec:
      containers:
      - image: hit1414/spring-msa-login:latest
        name: spring-login-pod
        env :
        - name : LOGIN_IP
          value : "spring-login.istio.svc.cluster.local"
        - name : LOGIN_PORT
          value : "8000"
        - name : PROJECT_IP
          value : "spring-proj.istio.svc.cluster.local"
        - name : PROJECT_PORT
          value : "8000"
        - name : MAIN_IP
          value : "spring-main.istio.svc.cluster.local"
        - name : MAIN_PORT
          value : "8000"
        - name : TODO_IP
          value : "spring-todo.istio.svc.cluster.local"
        - name : TODO_PORT
          value : "8000"
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-todo
  name: spring-todo
  namespace: istio
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: spring-todo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-todo
  labels:
    app: spring-todo
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-todo
      version: v1
  template:
    metadata:
      labels:
        app: spring-todo
        version: v1
    spec:
      containers:
      - image: hit1414/spring-msa-todo:latest
        name: spring-todo-pod
        env : 
        - name : LOGIN_IP
          value : "spring-login.istio.svc.cluster.local"
        - name : LOGIN_PORT
          value : "8000"
        - name : PROJECT_IP
          value : "spring-proj.istio.svc.cluster.local"
        - name : PROJECT_PORT
          value : "8000"
        - name : MAIN_IP
          value : "spring-main.istio.svc.cluster.local"
        - name : MAIN_PORT
          value : "8000"
        - name : TODO_IP
          value : "spring-todo.istio.svc.cluster.local"
        - name : TODO_PORT
          value : "8000"
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-todo-v2
  labels:
    app: spring-todo
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-todo
      version: v2
  template:
    metadata:
      labels:
        app: spring-todo
        version: v2
    spec:
      containers:
      - image: hit1414/spring-msa-todo:latest
        name: spring-todo-pod
        env :
        - name : LOGIN_IP
          value : "spring-login.istio.svc.cluster.local"
        - name : LOGIN_PORT
          value : "8000"
        - name : PROJECT_IP
          value : "spring-proj.istio.svc.cluster.local"
        - name : PROJECT_PORT
          value : "8000"
        - name : MAIN_IP
          value : "spring-main.istio.svc.cluster.local"
        - name : MAIN_PORT
          value : "8000"
        - name : TODO_IP
          value : "spring-todo.istio.svc.cluster.local"
        - name : TODO_PORT
          value : "8000"
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred2
---
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-proj
  name: spring-proj
  namespace: istio
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: spring-proj
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-proj
  labels:
    app: spring-proj
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-proj
      version: v1
  template:
    metadata:
      labels:
        app: spring-proj
        version: v1
    spec:
      containers:
      - image: hit1414/spring-msa-proj:latest
        name: spring-proj-pod
        env :
        - name : LOGIN_IP
          value : "spring-login.istio.svc.cluster.local"
        - name : LOGIN_PORT
          value : "8000"
        - name : PROJECT_IP
          value : "spring-proj.istio.svc.cluster.local"
        - name : PROJECT_PORT
          value : "8000"
        - name : MAIN_IP
          value : "spring-main.istio.svc.cluster.local"
        - name : MAIN_PORT
          value : "8000"
        - name : TODO_IP
          value : "spring-todo.istio.svc.cluster.local"
        - name : TODO_PORT
          value : "8000"
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-chat
  name: spring-chat
  namespace: istio
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: spring-chat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-chat
  labels:
    app: spring-chat
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-chat
      version: v1
  template:
    metadata:
      labels:
        app: spring-chat
        version: v1
    spec:
      containers:
      - image: hit1414/spring-chat:latest
        name: spring-chat-pod
        env : 
        - name : LOGIN_IP
          value : "spring-login.istio.svc.cluster.local"
        - name : LOGIN_PORT
          value : "8000"
        - name : PROJECT_IP
          value : "spring-proj.istio.svc.cluster.local"
        - name : PROJECT_PORT
          value : "8000"
        - name : MAIN_IP
          value : "spring-main.istio.svc.cluster.local"
        - name : MAIN_PORT
          value : "8000"
        - name : TODO_IP
          value : "spring-todo.istio.svc.cluster.local"
        - name : TODO_PORT
          value : "8000"
        - name : MESSAGE_IP
          value : "spring-chat.istio.svc.cluster.local"
        - name : MESSAGE_PORT
          value : "8000"
        - name : LOCAL_IP
          value : "spring-main.istio.svc.cluster.local"
        - name : LOCAL_PORT
          value : "8000"
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred2
