yamls/dr-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-main
spec:
  host: spring-main
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 1
    outlierDetection:
      baseEjectionTime: 180.000s
      consecutiveErrors: 1
      interval: 1.000s
      maxEjectionPercent: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-todo
spec:
  host: spring-todo
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        idleTimeout: 4s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-login
spec:
  host: spring-login
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        idleTimeout: 4s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-proj
spec:
  host: spring-proj
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        idleTimeout: 4s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-chat
spec:
  host: spring-chat
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        idleTimeout: 4s
